Fix avatar border, masthead bg, h2 lines, timeline dots, CV alignment, remove pub cards

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,7 +5,6 @@
 .masthead {
   position: relative;
   border-bottom: 2px solid $primary-color;
-  background: #f8fdfb;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.15s;
