--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -19,7 +19,7 @@
       content: '';
       position: absolute;
       left: -2.05em;
-      top: 0.5em;
+      top: 0.75em;
       width: 10px;
       height: 10px;
       border-radius: 50%;
